--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>可做跳转提示或404的蓝天白云主题动画模板</title>
+        <title>PanXun</title>
         <link href="404/css/public.css" rel="stylesheet" type="text/css" />
         <link href="404/css/index.css" rel="stylesheet" type="text/css" />
         <link href="404/css/404.css" rel="stylesheet" type="text/css" />
@@ -53,7 +53,9 @@
                 <div class="in">
                     <div class="textThis">
                         <h2>验证码错误</h2>
-                        <p><span>页面自动<a id="href" href="http://www.mycodes.net/">跳转</a></span><span>等待<b id="wait">3</b>秒</span></p>
+                        <p>
+                            <span>哈哈哈哈哈</span>
+                        </p>
                         <script type="text/javascript">                            (function() {
                                 var wait = document.getElementById('wait'), href = document.getElementById('href').href;
                                 var interval = setInterval(function() {
