--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="tipInfo">
                 <div class="in">
                     <div class="textThis">
-                        <h2>验证码错误</h2>
+                        <h2>漫游世界</h2>
                         <p>
                             <span>哈哈哈哈哈</span>
                         </p>
