--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="tipInfo">
                 <div class="in">
                     <div class="textThis">
-                        <h2>漫游世界</h2>
+                        <h2>请假条</h2>
                         <p>
-                            <span>哈哈哈哈哈</span>
+                            <span>哈哈哈哈哈,</br>每天熬在电脑面前的日子是真的无聊</span>
                         </p>
                         <script type="text/javascript">                            (function() {
                                 var wait = document.getElementById('wait'), href = document.getElementById('href').href;
