--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="textThis">
                         <h2>请假条</h2>
                         <p>
-                            <span>哈哈哈哈哈,</br>每天熬在电脑面前的日子是真的无聊</span>
+                            <span>哈哈哈哈哈,<br>每天熬在电脑面前的日子是真的无聊</br></span>
                         </p>
                         <script type="text/javascript">                            (function() {
                                 var wait = document.getElementById('wait'), href = document.getElementById('href').href;
