--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>PanXun</title>
+        <a href="http://www.xdocin.com/xdoc?_func=to&amp;_format=html&amp;_cache=1&amp;_xdoc=http://www.xdocin.com/demo/demo.docx" target="_blank" rel="nofollow">XDOC</a>
         <link href="404/css/public.css" rel="stylesheet" type="text/css" />
         <link href="404/css/index.css" rel="stylesheet" type="text/css" />
         <link href="404/css/404.css" rel="stylesheet" type="text/css" />
