--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
 
 <html>
-<body bgcolor="#abacad">
-<title>像我这样搬砖的人</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
 <meta name="apple-mobile-web-app-capable" content="yes"> 
 <meta name="apple-mobile-web-app-status-bar-style" content="black"> 
 <meta name="format-detection" content="telephone=no"> 
-<center>
-<font size="20sp"><p>搬砖使我超快乐</p><p>我超喜欢搬砖的</p></font>
-<img style="border:5px solid #50c4e5" src=http://img.iisix.cn/upload/1519867075x3704260404.jpg height="190" width="190" border="1"/>
-<img style="border:5px solid #50c4e5" src="http://img.iisix.cn/upload/1518402566x3524672170.gif" height="190" width="190" border="2"/>
-<img style="border:5px solid #50c4e5" src="http://img.iisix.cn/upload/1518401983x3524672170.gif" height="190" width="190">
-<img style="border:5px solid #50c4e5" src="http://img.iisix.cn/upload/1519868468x3704260404.gif" height="190" width="190"/>
-</center>
-<!-- <script>
-   alert("就先放着吧😄");
-   </script>
--->
-<!--<script> 
-document.oncontextmenu=new Function("return false") 
-document.onselectstart=new Function("return false") 
-</script>
--->
-</body>
+    <title>挖煤</title>
+    <center>
+        <img src=http://img.iisix.cn/upload/1533023432x3524672066.jpg height="190" width="190"/>
+    <<font size="30sp" color="#50c4e5"><p>享受生活！！！！！！！</p></font>
+    <center/>
 </html>
