--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <center>
         <img src=http://img.iisix.cn/upload/1533023432x3524672066.jpg height="190" width="190"/>
     <<font size="30sp" color="#50c4e5"><p>享受生活！！！！！！！</p></font>
-    <center/>
+    </center>
 </html>
