--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>挖煤</title>
     <center>
         <img src=http://img.iisix.cn/upload/1533023432x3524672066.jpg height="190" width="190"/>
-    <<font size="30sp" color="#50c4e5"><p>享受生活！！！！！！！</p></font>
+    <font size="20sp" color="#50c4e5"><p>享受生活！！！！！！！</p></font>
     </center>
 </html>
