--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="format-detection" content="telephone=no"> 
     <title>挖煤</title>
     <center>
-        <img src=http://img.iisix.cn/upload/1533023432x3524672066.jpg height="190" width="190"/>
-    <font color="#50c4e5"><p>享受生活！！！！！！！</p></font>
+        <img src=http://img.iisix.cn/upload/1533023432x3524672066.jpg height="100" width="100"/>
+    <font color="#50c4e5" size="15sp"><p>享受生活！！！！！！！</p></font>
     </center>
 </html>
