--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes"> 
 <meta name="apple-mobile-web-app-status-bar-style" content="black"> 
 <meta name="format-detection" content="telephone=no"> 
-    <title>挖煤</title>
+    <title>PanXun</title>
     <center>
-        <img src=http://img.iisix.cn/upload/1533023432x3524672066.jpg height="100" width="100"/>
-    <font color="#50c4e5" size="15sp"><p>享受生活！！！！！！！</p></font>
+        <img src=http://panxun.github.io/test.png height="100" width="100"/>
+    <font color="#50c4e5" size="15sp"><p>生活不止眼前的苟且，还有诗和远方</p></font>
     </center>
 </html>
