--- a/backups/index.html
+++ b/backups/index.html
@@ -1,8 +1,6 @@
 
 <h1>备份的东西emmm：</h1>
 <ul>
- <li><a href="panxun.github.io/backups/ssr4.8_win.zip">SSR Windows 客户端</a></li>
- <li><a href="panxun.github.io/backups/SSR_3.4.0.8.apk">SSR Android 客户端</a></li>
- <li><a href="panxun.github.io/backups/SSR_3.4.0.8.apk">SSR Android 客户端</a></li>
- <li><a href="panxun.github.io/backups/SSR_3.4.0.8.apk">SSR Android 客户端</a></li>
+ <li><a href="backups/ssr_win.7z">SSR Windows 客户端</a></li>
+ <li><a href="backups/SSR_3.4.0.8.apk">SSR Android 客户端</a></li>
 </ul>  
