--- a/backups/index.html
+++ b/backups/index.html
@@ -1,6 +1,6 @@
 
 <h1>备份的东西emmm：</h1>
 <ul>
- <li><a href="twice/ssr-win.7z">SSR Windows 客户端</a></li>
- <li><a href="twice/SSR_3.4.0.8.apk">SSR Android 客户端</a></li>
+ <li><a href="https://panxun.github.io/twice/ssr-win.7z">SSR For Windows</a></li>
+ <li><a href="https://panxun.github.io/twice/SSR_3.4.0.8.apk">SSR For Android</a></li>
 </ul>  
