--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="format-detection" content="telephone=no"> 
     <title>PanXun</title>
     <center>
-        <img src=https://panxun.github.io/test.png/>
+        <img src=https://panxun.github.io/test.png height="100" width="100"/>
     <font color="#50c4e5" size="5sp"><p>生活不止眼前的苟且，还有诗和远方</p></font>
     </center>
 </html>
