--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <center>
         <img src=https://panxun.github.io/test.png height="100" width="100"/>
     <font color="#50c4e5" size="5sp"><p>生活不止眼前的苟且，还有诗和远方</p></font>
-        <a href="htps://panxun.github.io/ew.apk">下载简天气2.0</a>
+        <a href="https://panxun.github.io/ew.apk">下载简天气2.0</a>
     </center>
 </html>
