--- a/random-roll-call/index.html
+++ b/random-roll-call/index.html
@@ -2,12 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
 		<title></title>
+		
 		<style>
 		  #box {
 		    width: 30%;
 		    height: 200px;
-		    background-color: rgb(233, 248, 214);
+		    background-color: #50C4E5;
 		    border: 1px solid rgb(130, 216, 18);
 		    font-size: 40px;
 		    font-weight: 600;
@@ -40,7 +42,7 @@
 	<body>
 		
 			
-		  <div id="box">随机点名</div>
+		  <div id="box">20级计网3班点名系统</div>
 		  <span id="span">开始</span>
 		
 	</body>
