--- a/random-roll-call/index.html
+++ b/random-roll-call/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-		<title></title>
+		<title>20级计网3班点名系统</title>
 		
 		<style>
 		  #box {
@@ -42,7 +42,7 @@
 	<body>
 		
 			
-		  <div id="box">20级计网3班点名系统</div>
+		  <div id="box">随机点名</div>
 		  <span id="span">开始</span>
 		
 	</body>
