--- a/random-roll-call/index.html
+++ b/random-roll-call/index.html
@@ -55,33 +55,46 @@
 	  //   "孙膑", "钟无艳", "阿轲", "高渐离", "刘禅", "庄周", "鲁班七号", "孙尚香", "嬴政", "妲己", "墨子", "赵云", "小乔", "廉颇"
 	  // ]
 	  var arr=[
-		  "滕青红",
-		  "文家琪",
-		  "谢坤廷",
-		  "徐朝吉",
-		  "于成勇",
-		  "张文海",
-		  "周天雨",
-		  "陈磊",
-		  "邓隆杰",
-		  "邓相芝",
-		  "何宝凤",
-		  "黄江柳",
-		  "雷磊",
-		  "李娅",
-		  "刘德辉",
-		  "潘勋",
-		  "漆钟民",
-		  "唐勇杰",
-		  "涂水兰",
-		  "王飞",
-		  "王元龙",
-		  "向初阳",
-		  "肖子意",
-		  "晏宇豪",
-		  "张川杰",
-		  "张在发",
-		  "朱杰华"
+		 "杨隆琳",
+"尹粤",
+"陈伟",
+"侯思哲",
+"黄锦涛",
+"蒋崇颖",
+"李瓒",
+"梁祥",
+"梁招",
+"刘慧俊",
+"吕利民",
+"覃文静",
+"谭芳明",
+"滕青红",
+"文家琪",
+"谢坤廷",
+"徐朝吉",
+"于成勇",
+"张文海",
+"周天雨",
+"陈磊",
+"邓隆杰",
+"邓相芝",
+"何宝凤",
+"黄江柳",
+"雷磊",
+"李娅",
+"刘德辉",
+"潘勋",
+"漆钟民",
+"唐勇杰",
+"涂水兰",
+"王飞",
+"王元龙",
+"向初阳",
+"肖子意",
+"晏宇豪",
+"张川杰",
+"张在发",
+"朱杰华"
 	  ]
 	  var box = document.getElementById("box");
 	  var span = document.getElementById("span");//获取元素
