--- a/random-roll-call/index2.html
+++ b/random-roll-call/index2.html
@@ -181,7 +181,7 @@
             //获取选中展示位置
             var nameSpan = document.getElementsByClassName('name')[0];
             //位置添加内容
-            nameSpan.innerText = name + "号";
+            nameSpan.innerText = name ;
         }
     </script>
 </body>
