--- a/random-roll-call/index2.html
+++ b/random-roll-call/index2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random roll call</title>
+    <title>20级计网3班随机点名系统</title>
     <style>
         * {
             margin: 0px;
@@ -75,6 +75,9 @@
             font-size: 35px;
             left: 40px;
             top: 50px;
+        }
+        span{
+            text-align:center;
         }
     </style>
 </head>
