Update and rename sms.html to me.html

--- a/me.html
+++ b/me.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <head>
- <title>Pixcat | Home</title>
+ <title>PanXun</title>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
  <!-- icon -->
- <link rel="icon" type="image/png" href="img/favicon.jpg" />
- <link rel="apple-touch-icon" href="img/favicon.jpg" />
+<!--  <link rel="icon" type="image/png" href="img/favicon.jpg" />
+ <link rel="apple-touch-icon" href="img/favicon.jpg" /> -->
  <!-- css -->
  <link rel="stylesheet" type="text/css" media="screen" href="css/sms.css" />
 </head>
