--- a/me.html
+++ b/me.html
@@ -12,13 +12,16 @@
 <body>
  <div class="messages">
  </div>
+ <div class="partTwo">
+   <img src="/test.png">
+   <h1>this is part two</h1>
+  <div>
  <!-- js -->
  <script src="js/anime.js">
  </script>
  <script src="js/sms.js">
  </script>
-<!-- toudu-->
-<audio id="musicid" src="fm/media/magic.mp3" preload="preload" autoplay="autoplay"  loop="loop"></audio>
+
 <!-- Baidu -->
  <script>
 var _hmt = _hmt || [];
