--- a/me.html
+++ b/me.html
@@ -13,7 +13,7 @@
  <div class="messages">
  </div>
  <div class="partTwo">
-   <img src="/test.png">
+   <img src="/test.png" align="center">
    <h1>this is part two</h1>
   <div>
  <!-- js -->
