--- a/me2.html
+++ b/me2.html
@@ -44,7 +44,7 @@
 			<article id="about">
 				<h2 class="major">关于我</h2>
 				<h3>About Me</h3>
-				<p>一个只会cv的废物。</p>
+				<p>一个在读带专生，一个只会cv的废物。</p>
 				<h3>Contact Me</h3>
 				<p><i class="fas fa-envelope"></i> 邮箱：2730739514<i class="fas fa-at"></i> qq.com<br />
 					<i class="fab fa-github"></i> Github：<a href="https://github.com/panxun" target="_blank">panxun</a>
