--- a/me1.html
+++ b/me1.html
@@ -40,7 +40,7 @@
 								<div class="clear">
 									<div class="introduct">
 										<img class="avatar" src="http://q.qlogo.cn/headimg_dl?dst_uin=2730739514&spec=640&img_type=jpg">
-										<p>一个只会cv的废物罢了。</p>
+										<p>一个在读带专生一个只会cv的废物罢了。</p>
 									</div>
 									
 								</div>
@@ -49,7 +49,7 @@
 					</div>
 					<div class="footer ch">
 						<div class="container">
-							<h3>滑小稽的个人主页</h3>
+							<h3></h3>
 							<p>逆光前行的路上，我早已失去光明。</p>
 							<p class="c"><a href="/">© 2021PX network studio.</a></p>
 						</div>
