--- a/me1.html
+++ b/me1.html
@@ -56,6 +56,9 @@
 					</div>
 
 					<script src="js/huaxiaoji.js"></script>
+					<audio  src="http://freetyst.nf.migu.cn/public/product5th/product34/2019/07/1514/2018%E5%B9%B412%E6%9C%8818%E6%97%A515%E7%82%B936%E5%88%86%E6%89%B9%E9%87%8F%E9%A1%B9%E7%9B%AESONY100%E9%A6%96-2/%E6%A0%87%E6%B8%85%E9%AB%98%E6%B8%85/MP3_320_16_Stero/6005971ALM4.mp3?channelid=03&k=0952725fc81a2daf&t=1613812887&msisdn=76fb075c-41ff-4e81-924d-0d712103b53a" autoplay="autoplay">
+			当前浏览器不支持audio
+		</audio>
 				</body>
 			</body>
 		</body>
