--- a/dxx/index.html
+++ b/dxx/index.html
@@ -41,7 +41,7 @@
 		</div> -->
 		<div class="main">
 			<a href="pages/11-17.html"><button type="button">第十一季十七期</button></a>
-			<button type="button">第十一季十八期</button>
+			<a href="pages/11-18.html"><button type="button">第十一季十八期</button></a>
 			
 		</div>
 
