--- a/dxx/index.html
+++ b/dxx/index.html
@@ -29,7 +29,7 @@
 	</head>
 	<body>
 		<div class="main">
-			<a class="" href="endpic.html"><button type="button">完成图</button></a>
+			<a class="" href="endpic.html"><button type="button">完成页</button></a>
 			<a class="" href="pyqshare.html"><button type="button">朋友圈分享</button></a>
 		</div>
 	</body>
