--- a/dxx/endpic.html
+++ b/dxx/endpic.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		
-		<title>完成图</title>
+		<title>完成页面</title>
 		<style type="text/css">
 			* {
 				padding: 0;
