--- a/dxx/index.html
+++ b/dxx/index.html
@@ -33,5 +33,4 @@
 			<a class="" href="pyqshare.html"><button type="button">朋友圈分享</button></a>
 		</div>
 	</body>
-	<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280134683'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1280134683%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
-</html>
+<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280134683'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1280134683%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script></html>
